fix-native-access-warning